--- a/.github/workflows/create-all-resource.yml
+++ b/.github/workflows/create-all-resource.yml
@@ -31,6 +31,7 @@ jobs:
     defaults:
       run:
         shell: bash
+    needs: resource1 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
